Fixed some margins for better visibility: spaced icons, header and footer away from post limits.

--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,14 @@
+html,
 body {
+    background-color: black;
+    height: 100%;
+    display: flex;
+    align-items: center;
     justify-content: center;
 }
 
 .postWrapper {
-    margin: auto;
+    background-color: whitesmoke;
     max-width: 600px;
 }
 
@@ -11,11 +16,12 @@ body {
 .optionsDiv {
     display: flex;
     justify-content: space-between;
-    margin: 1%;
+    margin: 2.5%;
 }
 
-.alignLeft {
-    width: 50%;
+.alignLeft,
+.iconsLeft {
+    width: 60%;
     display: flex;
     float: left;
 }
@@ -25,7 +31,8 @@ body {
 }
 
 .userImage {
-    margin: auto 0;
+    margin: auto;
+    margin-right: 2%;
 }
 
 .userImage i,
@@ -43,13 +50,18 @@ body {
     font-weight: bold;
 }
 
-.moreOptions {
-    margin: auto 0;
+.moreOptions,
+.iconsRight {
+    margin: auto 1%;
+}
+
+.iconsLeft i {
+    margin-right: 2%;
 }
 
 .footerDiv {
     height: 30%;
-    margin: 1%;
+    margin: 2.5%;
 }
 
 .postImage {
